--- a/views/partials/admin/sidebar.ejs
+++ b/views/partials/admin/sidebar.ejs
@@ -54,8 +54,26 @@
             </li>
 
 
+            <li class="nav-item">
+                <a class="nav-link" href="/admin/coupons">
+                    <span data-feather="file"></span>
+                    coupons
+                </a>
+            </li>
 
 
+            
+            
+
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="/admin/product-offers/" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Offers
+                </a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="/admin/product-offers/"> Product Offers</a></li>
+                  <li><a class="dropdown-item" href="/admin/category-offers/"> Category Offers</a></li>
+                </ul>
+            </li>
 
             <li class="nav-item">
                 <a class="nav-link" href="#">
