--- a/views/partials/user/header.ejs
+++ b/views/partials/user/header.ejs
@@ -16,13 +16,13 @@
                 <nav class="main-nav">
                     <ul class="menu sf-arrows">
                         <li class="megamenu-container active">
-                            <a href="#" class="sf-with-ul">Home</a>
+                            <a href="/" class="sf-with-ul">Home</a>
 
                                 </li>
 
                                 <li>
                                     
-                            <a href="" class="sf-with-ul">Shop</a>
+                            <a href="/search" class="sf-with-ul">Shop</a>
 
                             <div class="megamenu megamenu-md">
                             </div>
@@ -89,9 +89,9 @@
                     </form>
                 </div><!-- End .header-search -->
 
-                <a href="#" class="wishlist-link">
+                <a href="/user/wishlist" class="wishlist-link">
                     <i class="icon-heart-o"></i>
-                    <span class="wishlist-count">3</span>
+                    <!-- <span class="wishlist-count">3</span> -->
                 </a>
 
                 <div class="dropdown cart-dropdown">
