--- a/views/partials/user/sidebar.ejs
+++ b/views/partials/user/sidebar.ejs
@@ -42,6 +42,24 @@
                         <% } %>
                     </a></li>
             </ul>
+            <div class="bg-body-secondary px-4 py-3">
+                <h3 class="fs-5 mb-0 text-muted" style="color: #666;">Wallets & Referral</h3>
+            </div>
+            <ul class="list-unstyled mb-0">
+                <li class="border-bottom mb-0">
+                    <a class="nav-link-style d-flex align-items-center px-4 py-3 "
+                        href="#" style="color: #333;">
+                        <i class="ci-bag opacity-60 me-2 fs-5"></i>
+                            Wallets
+                    </a>
+                </li>
+                <li class="border-bottom mb-0">
+                    <a class="nav-link-style d-flex align-items-center px-4 py-3" href="/user/refferals" style="color: #333;">
+                        <i class="ci-heart opacity-60 me-2 fs-5"></i>
+                       Referral
+                       
+                    </a></li>
+            </ul>
             <div class="d-flex justify-content-center my-3 pb-3">
                 <a href="/logout">
                     <button class="btn btn-outline-danger fs-5">Sign Out</button>
