--- a/views/admin/categories/categories.ejs
+++ b/views/admin/categories/categories.ejs
@@ -23,9 +23,18 @@
 
 <div class="container d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
   <h1 class="h2"><%= locals.title ? locals.title : 'Dashboard' %></h1>
+
+  <header class=" text-center mb-20">
+    <form action="/admin/categories/" method="get" class="d-inline">
+      <div class="input-group input-group-sm border bg-success rounded-pill" style="width: 500px;">
+        <input type="text" class="form-control border-0 bg-white rounded-pill" placeholder="Search coupons..." name="search">
+        <button class="btn border-0 btn-outline-primary text-white rounded-pill" type="submit">Search</button>
+      </div>
+    </form>
+  </header>
   <div class="btn-toolbar mb-2 mb-md-0">
     <a href="/admin/category/add-category">
-      <button type="button" class="btn btn-sm btn-outline-primary">
+      <button type="button" class="btn btn-sm btn-outline-success">
         Add Category
       </button>
     </a>
