--- a/views/index.ejs
+++ b/views/index.ejs
@@ -56,7 +56,7 @@
                 <% products.forEach(element=> { %>
 
                     <div class="col-md-3  p-2 m-2  text-capitalize card border rounded">
-                        <a href="/ProductList">
+                        <a href="/search">
                             <img class="img-fluid img-thumbnail" src="/uploads/cropped/<%- element.images.image1 %>" alt="<%- element.product_name %>">
                         </a>
                         
