--- a/views/shop/checkout.ejs
+++ b/views/shop/checkout.ejs
@@ -14,29 +14,18 @@
 		</div><!-- End .container -->
 	</nav><!-- End .breadcrumb-nav -->
 
-	<div class="page-content">
+	<!-- <div class="page-content">
 		<div class="checkout">
 			<div class="container">
 				<div class="checkout-discount">
-					<form action="#">
-						<input type="text" class="form-control" required id="checkout-discount-input">
-						<label for="checkout-discount-input" class="text-truncate">Have a coupon? <span>Click here to
-								enter your code</span></label>
-					</form>
+					 -->
 				</div><!-- End .checkout-discount -->
 				<div class="container">
 					<div class="row">
 						<div class="col-lg-12">
 							<h1 class="checkout-title"><strong> Billing Details</h1>
 							</strong><!-- End .checkout-title -->
-							<br>
-
-							<h4>Your Items</h4>
-							<% userCart.items.forEach((item)=> { %>
-								<h6 class="my-0"><%- item.product_name %></h6>
-								<% }) %>
-						</div>
-						<br>
+							
 						<form class="needs-validation" id="orderForm">
 							<div class="d-flex">
 								<div class="row">
@@ -118,7 +107,7 @@
 									</div>
 
 								</div>
-								<aside class="col-lg-3">
+								<aside class="col-lg-4">
 									<div class="summary">
 										<h3 class="summary-title">Your Order</h3><!-- End .summary-title -->
 
@@ -140,7 +129,7 @@
 														</td>
 												</tr>
 
-
+												<% }) %>
 												<tr class="summary-subtotal">
 													<td>Subtotal:</td>
 													<td>₹<%= userCart.totalPrice %>
@@ -155,11 +144,43 @@
 													<td>₹<%= userCart.totalPrice %>
 													</td>
 												</tr><!-- End .summary-total -->
-												<% }) %>
+												
 											</tbody>
 										</table><!-- End .table table-summary -->
 
-
+										<li class="list-group-item d-flex justify-content-between bg-body-tertiary d-none" id="appliedCoupon">
+											<div class="text-success">
+											  <h6 class="my-0">Coupon code</h6>
+											  <small class="text-uppercase" id="coupon"></small>
+											</div>
+											<span class="text-success" id="discountAmount">−$</span>
+										  </li>
+										  <% if (typeof userCart.coupon !== 'undefined' && userCart.coupon) { %>
+										  <li class="list-group-item d-flex justify-content-between bg-body-tertiary" id="appliedCoupon">
+											<div class="text-success">
+											  <h6 class="my-0">Coupon code</h6>
+											  <small class="text-uppercase" id="coupon"><%- userCart.coupon.code %></small>
+											</div>
+											<span class="text-success" id="discountAmount">−$<%- userCart.couponDiscount %></span>
+										  </li>
+										  <% } %>
+								
+								
+										  <form class="card pt-4" id="applyCoupon">
+											<label class="form-label text-dark" for="couponCode">Apply Coupon Code</label>
+											<fieldset>
+											  <div class="input-group">
+												<input <% if (userCart && userCart.coupon) { %> disabled="disabled" <% } %> id="couponCode" name="code" type="text" class="form-control text-uppercase" placeholder="Coupon code" <% if (userCart && userCart.coupon) { %> value="<%- userCart.coupon.code %>" <% } %>>
+											  </div>
+											  <div class="'button">
+												<button <% if (userCart && userCart.coupon) { %> disabled="disabled" <% } %> type="submit" class="btn btn-outline-primary <% if (userCart && userCart.coupon) { %> d-none <% } %>">Apply</button>
+												<button onclick="removeCoupon()" type="button" class="btn btn-outline-warning <%- (typeof userCart.coupon !== 'undefined' && userCart.coupon ) ? '' : 'd-none'  %>">Remove Coupon</button>
+											  </div>
+											</fieldset>
+										  </form>
+										  
+								
+								<br>
 										<div class="my-3">
 											<div class="form-check">
 												<div class="block-header bg-secondary-light"><strong class="text-uppercase">Payment</strong></div>
@@ -934,3 +955,134 @@ if (form) {
 	);
 </script>
 <script src="/js/user/edit-address.js"></script>
+<script>
+	const couponCodeVal = document.getElementById('couponCode').value;
+	document.querySelector('#applyCoupon').addEventListener('submit', function(event) {
+	  event.preventDefault(); // Prevent the form from submitting normally
+	  
+	  // Get the coupon code from the input field
+	  const couponCodeInput = document.getElementById('couponCode');
+	  const couponCodeVal = document.getElementById('couponCode').value;
+  
+	  // Display a SweetAlert confirmation dialog
+	  Swal.fire({
+		title: 'Are you sure?',
+		text: "Do you want to apply this coupon? " + couponCodeVal.toUpperCase(),
+		icon: 'warning',
+		showCancelButton: true,
+		confirmButtonColor: '#3085d6',
+		cancelButtonColor: '#d33',
+		confirmButtonText: 'Yes, apply it!'
+	  }).then(async (result) => {
+		if (result.isConfirmed) {
+		  // If confirmed, send a POST request to the server
+		  try {
+			const response = await fetch('/checkout/verify-coupon', {
+			  method: 'POST',
+			  headers: {
+				'Content-Type': 'application/json',
+			  },
+			  body: JSON.stringify({
+				code: couponCodeVal.toLowerCase()
+			  }),
+			});
+  
+			if (response.ok) {
+			  const data = await response.json();
+  
+			  // If the response is successful, disable the input field
+			  const coupon = document.getElementById('appliedCoupon');
+			  const couponCode = document.getElementById('coupon');
+			  const discountAmount = document.getElementById('discountAmount');
+			  let grandTotal = document.getElementById('grandTotal').innerHTML;
+  
+			  coupon.classList.remove('d-none');
+			  couponCode.innerText = `${data.coupon.code}`;
+			  discountAmount.innerText = `-$${data.discountAmount}`;
+  
+			  couponCodeInput.disabled = true;
+			  couponCodeInput.value = '';
+			  Swal.fire(
+				'Applied!',
+				data.message,
+				'success'
+			  ).then(() =>{
+				location.reload()
+			  });
+			} else {
+			  // Handle errors
+			  const errorData = await response.json();
+			  Swal.fire(
+				'Error!',
+				errorData.message || 'There was an error applying the coupon.',
+				'error'
+			  );
+			}
+		  } catch (error) {
+			console.error('Error:', error);
+			Swal.fire(
+			  'Error!',
+			  'There was an error applying the coupon.',
+			  'error'
+			);
+		  }
+		}
+	  });
+  
+	});
+  
+  
+  
+	const removeCoupon = async () => {
+	  Swal.fire({
+		title: 'Are you sure?',
+		text: "Do you want to remove this coupon? " + couponCodeVal.toUpperCase(),
+		icon: 'warning',
+		showCancelButton: true,
+		confirmButtonColor: '#3085d6',
+		cancelButtonColor: '#d33',
+		confirmButtonText: 'Yes, remove it!'
+	  }).then(async (result) => {
+		if (result.isConfirmed) {
+		  // If confirmed, send a POST request to the server
+		  try {
+			const response = await fetch('/checkout/remove-coupon', {
+			  method: 'POST',
+			  headers: {
+				'Content-Type': 'application/json',
+			  },
+			});
+  
+			if (response.ok) {
+			  const data = await response.json();
+  
+			  Swal.fire(
+				'Removed!',
+				data.message,
+				'success'
+			  ).then(() =>{
+				location.reload()
+			  });
+			} else {
+			  // Handle errors
+			  const errorData = await response.json();
+			  Swal.fire(
+				'Error!',
+				errorData.message || 'There was an error removing the coupon.',
+				'error'
+			  ).then(() =>{
+				location.reload()
+			  });
+			}
+		  } catch (error) {
+			console.error('Error:', error);
+			Swal.fire(
+			  'Error!',
+			  'There was an error removing the coupon.',
+			  'error'
+			);
+		  }
+		}
+	  });
+	}
+  </script>
