--- a/views/user/order.ejs
+++ b/views/user/order.ejs
@@ -35,9 +35,7 @@
                          <p class="card-text"><small class="text-body-secondary fs-2"><span class="badge bg-success"><%- item.status %></span></small></p>
                        </div>
                        <div class="d-grid gap-2 flex-row mx-auto">
-                      
                         <button type="button" class="btn btn-outline-warning" onclick="cancelOrder('<%- orderDetails._id %>')">Cancel Order</button>
-                        
                        </div>
                        
                      </div>
@@ -56,54 +54,54 @@
 
 
  <script defer>
-  const cancelOrder = async (orderId, itemId) => {
-    const confirmed = await Swal.fire({
-      title: "Are you sure?",
-      text: "You want to cancel this order.",
-      icon: "warning",
-      showCancelButton: true,
-      confirmButtonText: "Yes, cancel!",
-      cancelButtonText: "No, keep it!",
-      reverseButtons: true,
-    });
-
-    if (confirmed.isConfirmed) {
-      try {
-        const response = await fetch(`/user/cancel-order/${orderId}/${itemId}`, {
-          method: "POST",
-          headers: {
-            "Content-Type": "application/json",
-          },
-        });
-        console.log(response);
-        const data = await response.json(); // Parse the response as JSON
-        console.log(data);
-        if (response.ok) {
-          Swal.fire({
-            title: "Success!",
-            text: data.message, // Use the message from the backend
-            icon: "success",
-            timer: 1500,
-          }).then(() => {
-            location.reload();
+   const cancelOrder = async (id,itemId) => {
+      const confirmed = await Swal.fire({
+        title: "Are you sure?",
+        text: "You want to cancel this order.",
+        icon: "warning",
+        showCancelButton: true,
+        confirmButtonText: "Yes, cancel!",
+        cancelButtonText: "No, keep it!",
+        reverseButtons: true,
+      });
+  
+      if (confirmed.isConfirmed) {
+        try {
+          const response = await fetch(`/user/cancel-order/${id}/${itemId}`, {
+            method: "POST",
+            headers: {
+              "Content-Type": "application/json",
+            },
           });
-        } else {
+          console.log(response);
+          const data = await response.json(); // Parse the response as JSON
+          console.log(data);
+          if (response.ok) {
+            Swal.fire({
+              title: "Success!",
+              text: data.message, // Use the message from the backend
+              icon: "success",
+              timer: 1500,
+            }).then(() => {
+              location.reload();
+            });
+          } else {
+            Swal.fire({
+              title: "Error!",
+              text: data.message || "Something went wrong.", // Use the message from the backend if available
+              icon: "error",
+              timer: 1500,
+            });
+          }
+        } catch (error) {
+          console.error(error);
           Swal.fire({
             title: "Error!",
-            text: data.message || "Something went wrong.", // Use the message from the backend if available
+            text: "Something went wrong.",
             icon: "error",
             timer: 1500,
           });
         }
-      } catch (error) {
-        console.error(error);
-        Swal.fire({
-          title: "Error!",
-          text: "Something went wrong.",
-          icon: "error",
-          timer: 1500,
-        });
       }
     }
-  }
- 
+    </script>
