--- a/views/user/wishlist.ejs
+++ b/views/user/wishlist.ejs
@@ -78,86 +78,72 @@
   
   <script defer>
     const wishlistRemove = async (productId) => {
-      // Ask for confirmation using SweetAlert2
-      const result = await Swal.fire({
-        title: 'Are you sure?',
-        text: "You won't be able to revert this!",
-        icon: 'warning',
-        showCancelButton: true,
-        confirmButtonColor: '#3085d6',
-        cancelButtonColor: '#d33',
-        confirmButtonText: 'Yes, remove it!'
+  try {
+    // Ask for confirmation using SweetAlert2
+    const result = await Swal.fire({
+      title: 'Are you sure?',
+      text: "You won't be able to revert this!",
+      icon: 'warning',
+      showCancelButton: true,
+      confirmButtonColor: '#3085d6',
+      cancelButtonColor: '#d33',
+      confirmButtonText: 'Yes, remove it!'
+    });
+
+    if (result.isConfirmed) {
+      // If confirmed, make a POST request to the backend to remove the item from the wishlist
+      const response = await fetch('/user/remove-from-wishlist', {
+        method: 'DELETE',
+        headers: {
+          'Content-Type': 'application/json'
+        },
+        body: JSON.stringify({
+          productId
+        })
       });
-  
-      if (result.isConfirmed) {
-        // If confirmed, make a POST request to the backend to remove the item from the wishlist
-        try {
-          const response = await fetch('/user/remove-from-wishlist', {
-            method: 'DELETE',
-            headers: {
-              'Content-Type': 'application/json'
-            },
-            body: JSON.stringify({
-              productId
-            })
-          });
-  
-          if (response.ok) {
-            const data = await response.json();
-            if (data.success) {
-              // If successful, show a success message
-              Swal.fire(
-                'Removed!',
-                'Item has been removed from your wishlist.',
-                'success'
-              ).then((result) => {
-          if (result.isConfirmed) {
-            
-            window.location.reload();
-          }
-        });
-              // Optionally, update the UI to reflect the change
-            } else {
-              // If not successful, show an error message
-              Swal.fire(
-                'Failed!',
-                data.message || 'Failed to remove item from wishlist.',
-                'error'
-              ).then((result) => {
-          if (result.isConfirmed) {
-            
-            window.location.reload();
-          }
-        });
-            }
-          } else {
-            // Handle server errors
-            Swal.fire(
-              'Error!',
-              'An error occurred while trying to remove the item.',
-              'error'
-            ).then((result) => {
-          if (result.isConfirmed) {
-            
-            window.location.reload();
-          }
-        });
-          }
-        } catch (error) {
-          // Handle network errors
+
+      if (response.ok) {
+        const data = await response.json();
+        if (data.success) {
+          // If successful, show a success message and reload the page
           Swal.fire(
-            'Error!',
-            'An error occurred while trying to remove the item.',
-            'error'
-          ).then((result) => {
-          if (result.isConfirmed) {
-            
+            'Removed!',
+            'Item has been removed from your wishlist.',
+            'success'
+          ).then(() => {
             window.location.reload();
-          }
-        });
+          });
+        } else {
+          // If not successful, show an error message and reload the page
+          Swal.fire(
+            'Failed!',
+            data.message || 'Failed to remove item from wishlist.',
+            'error'
+          ).then(() => {
+            window.location.reload();
+          });
         }
+      } else {
+        // Handle server errors and reload the page
+        Swal.fire(
+          'Error!',
+          'An error occurred while trying to remove the item.',
+          'error'
+        ).then(() => {
+          window.location.reload();
+        });
       }
-    };
-  
-  
+    }
+  } catch (error) {
+    // Handle network errors and reload the page
+    Swal.fire(
+      'Error!',
+      'An error occurred while trying to remove the item.',
+      'error'
+    ).then(() => {
+      window.location.reload();
+    });
+  }
+};
+
   </script>
